--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -4,12 +4,43 @@
   <title>Page Title</title>
   
   <body>
+<img src="../assets/logo/logo-01.svg" />
 
-    <h1>I am the solution to HW1!</h1>
+<hr> </hr>
 
-    <p>
+
+
+    <h2> PRODUCTS</h2>
+    <H3> CART</H3>
+<p> Our hand-made cinnamon rolls </p>
+
+<img src="../assets/products/original-cinnamon-roll.jpg" />
+<p> Original cinnamon roll </p>
+<p> $2.49 </p>
+
+<img src="../assets/products/apple-cinnamon-roll.jpg" />
+<p> Apple cinnamon roll </p>
+<p> $3.49 </p>
+
+<img src="../assets/products/raisin-cinnamon-roll.jpg" />
+<p> Raisin cinnamon roll </p>
+<p> $2.99 </p>
+
+<img src="../assets/products/walnut-cinnamon-roll.jpg" />
+<p> Walnut cinnamon roll </p>
+<p> $3.49 </p>
+
+<img src="../assets/products/double-chocolate-cinnamon-roll.jpg" />
+<p> Double-chocolate cinnamon roll </p>
+<p> $3.99 </p>
+
+<img src="../assets/products/strawberry-cinnamon-roll.jpg" />
+<p> Strawberry cinnamon roll </p>
+<p> $3.99 </p>
+
+    <!-- <p>
         And I can link to <a href="./otherpage.html">other pages.</a>
-    </p>
+    </p> -->
 
   </body>
 </html>
