images pages size
added the width and height to all pages alongside, css file

--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -1,46 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
   <meta charset="UTF-8">
   <title>Page Title</title>
-  
-  <body>
-<img src="../assets/logo/logo-01.svg" />
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
 
-<hr> </hr>
+  <div class="logo">
+    <img src="../assets/logo/logo-01.svg" class="logo-img" />
+  </div>
 
+  <hr />
 
+  <h2>PRODUCTS</h2>
+  <h3>CART</h3>
+  <p>Our hand-made cinnamon rolls</p>
 
-    <h2> PRODUCTS</h2>
-    <H3> CART</H3>
-<p> Our hand-made cinnamon rolls </p>
+<img src="../assets/products/original-cinnamon-roll.jpg" class="orginal-product-page-img"/>
+ 
 
-<img src="../assets/products/original-cinnamon-roll.jpg" />
 <p> Original cinnamon roll </p>
 <p> $2.49 </p>
 
-<img src="../assets/products/apple-cinnamon-roll.jpg" />
+
+<img src="../assets/products/apple-cinnamon-roll.jpg" class="orginal-product-page-img"/>
+
+
 <p> Apple cinnamon roll </p>
 <p> $3.49 </p>
 
-<img src="../assets/products/raisin-cinnamon-roll.jpg" />
+
+<img src="../assets/products/raisin-cinnamon-roll.jpg" class="orginal-product-page-img"/>
+
 <p> Raisin cinnamon roll </p>
 <p> $2.99 </p>
 
-<img src="../assets/products/walnut-cinnamon-roll.jpg" />
+
+
+<img src="../assets/products/walnut-cinnamon-roll.jpg" class="orginal-product-page-img"/>
+
 <p> Walnut cinnamon roll </p>
 <p> $3.49 </p>
 
-<img src="../assets/products/double-chocolate-cinnamon-roll.jpg" />
+
+
+<img src="../assets/products/double-chocolate-cinnamon-roll.jpg" class="orginal-product-page-img"/>
+
 <p> Double-chocolate cinnamon roll </p>
 <p> $3.99 </p>
 
-<img src="../assets/products/strawberry-cinnamon-roll.jpg" />
+
+
+<img src="../assets/products/strawberry-cinnamon-roll.jpg" class="orginal-product-page-img"/>
+
 <p> Strawberry cinnamon roll </p>
 <p> $3.99 </p>
 
-    <!-- <p>
-        And I can link to <a href="./otherpage.html">other pages.</a>
-    </p> -->
 
-  </body>
+
+    
+</body>
 </html>
