--- a/solution-hw1/productdetails.html
+++ b/solution-hw1/productdetails.html
@@ -1,26 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Product Detail Page</title>
+  <meta charset="UTF-8">
+  <title>Product Detail Page</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-    <img src="../assets/logo/logo-01.svg" />
 
-<hr> </hr>
+<body>
+
+  <div class="logo">
+    <img src="../assets/logo/logo-01.svg" class="logo-img" />
+  </div>
+
+  <hr />
 
    
 <h2> PRODUCTS</h2>
 <H3> CART</H3>
 <p> Original cinnamon roll </p>
 
-<img src="../assets/products/original-cinnamon-roll.jpg" />
+
+<img src="../assets/products/original-cinnamon-roll.jpg" class="orginal-bunbun-product-details-img"/>
+</div>
 <p> Customize our delicious</p>
 <p> hand-made cinnamon roll to</p>
 <p> your likng! </p>
 
+
 <!-- learned to create a dropdown from w3schools -->
 
 <label for="Glazing"> Glazing:</label>
+
 
 <select name="Glazing" id="Glazing">
   <option value="Keep original">Keep original</option>
