--- a/solution-hw1/shoppingcart.html
+++ b/solution-hw1/shoppingcart.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Product Gallery</title>
+  <meta charset="UTF-8">
+  <title>Product Gallery</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-<img src="../assets/logo/logo-01.svg" />
+  <div class="logo">
+    <img src="../assets/logo/logo-01.svg" class="logo-img" />
+  </div>
 
 <hr> </hr>
 
@@ -14,14 +18,18 @@
 <H3> CART</H3>
 <h2> Shopping Cart</h2>
 
-<img src="../assets/products/original-cinnamon-roll.jpg" />
+<img src="../assets/products/original-cinnamon-roll.jpg" class="orginal-product-gallery-img"/>
+
+
 
 <p> Original Cinnamon Roll</p>
 <p> Glazing:Keep original </p>
 <p> Pack Size: 1 </p>
 <p> $ 2.49 </p>
 
-<img src="../assets/products/double-chocolate-cinnamon-roll.jpg" />
+
+<img src="../assets/products/double-chocolate-cinnamon-roll.jpg" class="orginal-product-gallery-img"/>
+
 
 <p> Double Chocolate Cinnamon Roll</p>
 <p> Glazing: Sugar milk </p>
