added new code based of hw 1 section 2.4

--- a/solution-hw1/productdetails.html
+++ b/solution-hw1/productdetails.html
@@ -15,16 +15,27 @@
   <hr />
 
    
-<h2> PRODUCTS</h2>
-<H3> CART</H3>
-<p> Original cinnamon roll </p>
+  <div class="original-prodcuts-text">
+    <h2>PRODUCTS</h2>
+  </div>
+  
+    <div class="original-cart-text">
+    <h3>CART</h3>
+  </div>
+  
+    <div class="original-sentence-right-under-cart-text">
+    <p>Our hand-made cinnamon rolls</p>
+  </div>
 
 
 <img src="../assets/products/original-cinnamon-roll.jpg" class="orginal-bunbun-product-details-img"/>
 </div>
+
+<div class="original-prodcuts-details-text">
 <p> Customize our delicious</p>
 <p> hand-made cinnamon roll to</p>
 <p> your likng! </p>
+
 
 
 <!-- learned to create a dropdown from w3schools -->
@@ -49,6 +60,8 @@
 </select>
 
 <p> $2.49 Add to Cart</p>
+
+</div>
 
 </body>
 </html>
