--- a/solution-hw1/shoppingcart.html
+++ b/solution-hw1/shoppingcart.html
@@ -14,32 +14,43 @@
 <hr> </hr>
 
    
-<h2> PRODUCTS</h2>
-<H3> CART</H3>
+<div class="original-prodcuts-text">
+    <h2>PRODUCTS</h2>
+  </div>
+  
+    <div class="original-cart-text">
+    <h3>CART</h3>
+  </div>
+
+<div class="original-shopping-cart-text">
 <h2> Shopping Cart</h2>
+</div>
 
 <img src="../assets/products/original-cinnamon-roll.jpg" class="orginal-product-gallery-img"/>
 
 
-
+<div class="original-under-image-shopping-cart-text"> 
 <p> Original Cinnamon Roll</p>
 <p> Glazing:Keep original </p>
 <p> Pack Size: 1 </p>
 <p> $ 2.49 </p>
-
+</div>
 
 <img src="../assets/products/double-chocolate-cinnamon-roll.jpg" class="orginal-product-gallery-img"/>
 
-
+<div class="original-under-image-shopping-cart-text"> 
 <p> Double Chocolate Cinnamon Roll</p>
 <p> Glazing: Sugar milk </p>
 <p> Pack Size: 6 </p>
 <p> $ 27.45 </p>
+</div>
 
 <hr> </hr>
 
+<div class="original-line-break-shopping-cart-text"> 
 <p> $ 29.94 </p>
 <p> Checkout </p>
+</div>
 
 </body>
 </html>
