my checkout button is wrong

--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Page Title</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
   <div class="logo">
@@ -14,83 +16,99 @@
   <hr />
 
   <div class="original-prodcuts-text">
-  <h2>PRODUCTS</h2>
-</div>
+    <h2>PRODUCTS</h2>
+  </div>
 
   <div class="original-cart-text">
-  <h3>CART</h3>
-</div>
+    <h3>CART</h3>
+  </div>
 
   <div class="original-sentence-right-under-cart-text">
-  <p>Our hand-made cinnamon rolls</p>
-</div>
+    <p>Our hand-made cinnamon rolls</p>
+  </div>
 
-<img src="../assets/products/original-cinnamon-roll.jpg" class="orginal-product-page-img"/>
- 
-<div class="original-index-text">
-<p> Original cinnamon roll </p>
-</div>
+  <div class="cinnammon-item"> 
+    <img src="../assets/products/original-cinnamon-roll.jpg" class="orginal-product-page-img" alt="Original Cinnamon Roll" />
 
-<div class="original-index-price-text">
-<p> $2.49 </p>
-</div>
+    <div class="original-index-text">
+        <p>Original cinnamon roll</p>
+    </div>
 
+    <div class="original-index-price-text">
+        <p>$2.49</p>
+    </div>
+  </div>
 
-<img src="../assets/products/apple-cinnamon-roll.jpg" class="orginal-product-page-img"/>
+  <!-- <div class="cinnammon-item"> 
+  
+    <img src="../assets/products/original-cinnamon-roll.jpg" class="orginal-product-page-img" />
 
+    <div class="original-index-text">
+      <p> Original cinnamon roll </p>
+    </div>
 
-<div class="original-index-text">
-<p> Apple cinnamon roll </p>
-</div>
-
-<div class="original-index-price-text">
-<p> $3.49 </p>
-</div>
-
-<img src="../assets/products/raisin-cinnamon-roll.jpg" class="orginal-product-page-img"/>
-
-<div class="original-index-text">
-<p> Raisin cinnamon roll </p>
-</div>
-
-<div class="original-index-price-text">
-<p> $2.99 </p>
-</div>
+    <div class="original-index-price-text">
+      <p> $2.49 </p>
+    </div>
+  </div> -->
 
 
-<img src="../assets/products/walnut-cinnamon-roll.jpg" class="orginal-product-page-img"/>
-
-<div class="original-index-text">
-<p> Walnut cinnamon roll </p>
-</div>
-
-<div class="original-index-price-text">
-<p> $3.49 </p>
-</div>
+  <img src="../assets/products/apple-cinnamon-roll.jpg" class="orginal-product-page-img" />
 
 
-<img src="../assets/products/double-chocolate-cinnamon-roll.jpg" class="orginal-product-page-img"/>
+  <div class="original-index-text">
+    <p> Apple cinnamon roll </p>
+  </div>
 
-<div class="original-index-text">
-<p> Double-chocolate cinnamon roll </p>
-</div>
+  <div class="original-index-price-text">
+    <p> $3.49 </p>
+  </div>
 
-<div class="original-index-price-text">
-<p> $3.99 </p>
-</div>
+  <img src="../assets/products/raisin-cinnamon-roll.jpg" class="orginal-product-page-img" />
 
+  <div class="original-index-text">
+    <p> Raisin cinnamon roll </p>
+  </div>
 
-<img src="../assets/products/strawberry-cinnamon-roll.jpg" class="orginal-product-page-img"/>
-
-<div class="original-index-text">
-<p> Strawberry cinnamon roll </p>
-</div>
-
-<div class="original-index-price-text">
-<p> $3.99 </p>
-</div>
+  <div class="original-index-price-text">
+    <p> $2.99 </p>
+  </div>
 
 
-    
+  <img src="../assets/products/walnut-cinnamon-roll.jpg" class="orginal-product-page-img" />
+
+  <div class="original-index-text">
+    <p> Walnut cinnamon roll </p>
+  </div>
+
+  <div class="original-index-price-text">
+    <p> $3.49 </p>
+  </div>
+
+
+  <img src="../assets/products/double-chocolate-cinnamon-roll.jpg" class="orginal-product-page-img" />
+
+  <div class="original-index-text">
+    <p> Double-chocolate cinnamon roll </p>
+  </div>
+
+  <div class="original-index-price-text">
+    <p> $3.99 </p>
+  </div>
+
+
+  <img src="../assets/products/strawberry-cinnamon-roll.jpg" class="orginal-product-page-img" />
+
+  <div class="original-index-text">
+    <p> Strawberry cinnamon roll </p>
+  </div>
+
+  <div class="original-index-price-text">
+    <p> $3.99 </p>
+  </div>
+
+
+
 </body>
+
 </html>
