--- a/solution-hw1/productdetails.html
+++ b/solution-hw1/productdetails.html
@@ -35,11 +35,12 @@
 <p> Customize our delicious</p>
 <p> hand-made cinnamon roll to</p>
 <p> your likng! </p>
-
+</div>
 
 
 <!-- learned to create a dropdown from w3schools -->
 
+<div class="dropdown-container">
 <label for="Glazing"> Glazing:</label>
 
 
@@ -58,10 +59,14 @@
   <option value="6">6</option>
   <option value="12">12</option>
 </select>
-
-<p> $2.49 Add to Cart</p>
-
 </div>
 
+<!-- </div> -->
+
+<div class="checkout">
+    <p> $2.49 <button> Add to Cart </button></p>
+</div>
+
+</div>
 </body>
 </html>
