--- a/solution-hw1/shoppingcart.html
+++ b/solution-hw1/shoppingcart.html
@@ -31,7 +31,7 @@
 
 <div class="original-under-image-shopping-cart-text"> 
 <p> Original Cinnamon Roll</p>
-<p> Glazing:Keep original </p>
+<p> Glazing: Keep original </p>
 <p> Pack Size: 1 </p>
 <p> $ 2.49 </p>
 </div>
@@ -48,8 +48,9 @@
 <hr> </hr>
 
 <div class="original-line-break-shopping-cart-text"> 
-<p> $ 29.94 </p>
-<p> Checkout </p>
+<p> Total: $ 29.94 </p>
+<button> Checkout </button>
+
 </div>
 
 </body>
