hover for add to cart works and button

--- a/solution-hw1/shoppingcart.html
+++ b/solution-hw1/shoppingcart.html
@@ -47,11 +47,10 @@
 
 <hr> </hr>
 
-<div class="original-line-break-shopping-cart-text"> 
-<p> Total: $ 29.94 </p>
-<button> Checkout </button>
-
+<div class="checkout-button">
+    <button> Checkout </button>
 </div>
+
 
 </body>
 </html>
