worked on getting linking to all pages

--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -3,30 +3,44 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Page Title</title>
+  <title>Product Gallery</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 
   <div class="logo">
-    <img src="../assets/logo/logo-01.svg" class="logo-img" />
+    <a href="index.html">
+    <img src="../assets/logo/logo-01.svg" class="logo-img" /></a>
   </div>
 
   <hr />
 
-  <div class="original-prodcuts-text">
-    <h2>PRODUCTS</h2>
+  <div class="original-products-text">
+    <a href="index.html">PRODUCTS</a>
   </div>
 
   <div class="original-cart-text">
-    <h3>CART</h3>
+    <a href="shoppingcart.html">CARTS</a>
   </div>
 
   <div class="original-sentence-right-under-cart-text">
     <p>Our hand-made cinnamon rolls</p>
   </div>
 
+  <!-- this is putting everything into a div, use this to help yourself later, cinnamon is just a random named i used for now  -->
+ <!-- <a href="product_details.html">
+    <div class="cinnammon-roll-block">
+      <img class="roll-img" src="../assets/products/original-cinnamon-roll.jpg"
+        alt="image of delicious cinnamon roll">
+      <div class="caption">
+        <p class="type">Original cinnamon roll</p>
+        <p class="price">$ 2.49</p>
+      </div>
+    </div>
+  </a> -->
+ 
+  <a href="productdetails.html">
   <div class="cinnammon-item"> 
     <img src="../assets/products/original-cinnamon-roll.jpg" class="orginal-product-page-img" alt="Original Cinnamon Roll" />
 
@@ -38,21 +52,9 @@
         <p>$2.49</p>
     </div>
   </div>
+ </a>
 
   <!-- <div class="cinnammon-item"> 
-  
-    <img src="../assets/products/original-cinnamon-roll.jpg" class="orginal-product-page-img" />
-
-    <div class="original-index-text">
-      <p> Original cinnamon roll </p>
-    </div>
-
-    <div class="original-index-price-text">
-      <p> $2.49 </p>
-    </div>
-  </div> -->
-
-
   <img src="../assets/products/apple-cinnamon-roll.jpg" class="orginal-product-page-img" />
 
 
@@ -63,7 +65,23 @@
   <div class="original-index-price-text">
     <p> $3.49 </p>
   </div>
+</div> -->
 
+<a href="productdetails.html">
+<div class="cinnammon-item"> 
+  <img src="../assets/products/apple-cinnamon-roll.jpg" class="orginal-product-page-img" />
+
+  <div class="original-index-text">
+    <p>Apple cinnamon roll</p>
+  </div>
+
+  <div class="original-index-price-text">
+    <p>$3.49</p>
+  </div>
+</div>
+</a>
+
+<div class="cinnammon-item"> 
   <img src="../assets/products/raisin-cinnamon-roll.jpg" class="orginal-product-page-img" />
 
   <div class="original-index-text">
@@ -73,8 +91,10 @@
   <div class="original-index-price-text">
     <p> $2.99 </p>
   </div>
+</div>
 
 
+<div class="cinnammon-item"> 
   <img src="../assets/products/walnut-cinnamon-roll.jpg" class="orginal-product-page-img" />
 
   <div class="original-index-text">
@@ -84,8 +104,9 @@
   <div class="original-index-price-text">
     <p> $3.49 </p>
   </div>
+</div>
 
-
+<div class="cinnammon-item"> 
   <img src="../assets/products/double-chocolate-cinnamon-roll.jpg" class="orginal-product-page-img" />
 
   <div class="original-index-text">
@@ -95,8 +116,10 @@
   <div class="original-index-price-text">
     <p> $3.99 </p>
   </div>
+</div>
 
 
+<div class="cinnammon-item"> 
   <img src="../assets/products/strawberry-cinnamon-roll.jpg" class="orginal-product-page-img" />
 
   <div class="original-index-text">
@@ -106,7 +129,7 @@
   <div class="original-index-price-text">
     <p> $3.99 </p>
   </div>
-
+</div>
 
 
 </body>
