--- a/solution-hw1/productdetails.html
+++ b/solution-hw1/productdetails.html
@@ -8,19 +8,20 @@
 
 <body>
 
-  <div class="logo">
-    <img src="../assets/logo/logo-01.svg" class="logo-img" />
-  </div>
+    <div class="logo">
+        <a href="index.html">
+        <img src="../assets/logo/logo-01.svg" class="logo-img" /></a>
+      </div>
 
   <hr />
 
    
-  <div class="original-prodcuts-text">
-    <h2>PRODUCTS</h2>
+  <div class="original-products-text">
+    <a href="index.html">PRODUCTS</a>
   </div>
-  
-    <div class="original-cart-text">
-    <h3>CART</h3>
+
+  <div class="original-cart-text">
+    <a href="shoppingcart.html">CARTS</a>
   </div>
   
     <div class="original-sentence-right-under-cart-text">
@@ -63,7 +64,7 @@
 
 <!-- </div> -->
 
-<div class="checkout">
+<div class="checkout-box">
     <p> $2.49 <button> Add to Cart </button></p>
 </div>
 
