--- a/solution-hw1/shoppingcart.html
+++ b/solution-hw1/shoppingcart.html
@@ -2,24 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Product Gallery</title>
+  <title>Shopping Cart</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
   <div class="logo">
-    <img src="../assets/logo/logo-01.svg" class="logo-img" />
+    <a href="index.html">
+    <img src="../assets/logo/logo-01.svg" class="logo-img" /></a>
   </div>
 
 <hr> </hr>
 
-   
-<div class="original-prodcuts-text">
-    <h2>PRODUCTS</h2>
+<div class="original-products-text">
+    <a href="index.html">PRODUCTS</a>
   </div>
-  
-    <div class="original-cart-text">
-    <h3>CART</h3>
+
+  <div class="original-cart-text">
+    <a href="shoppingcart.html">CARTS</a>
   </div>
 
 <div class="original-shopping-cart-text">
@@ -42,14 +42,15 @@
 <p> Double Chocolate Cinnamon Roll</p>
 <p> Glazing: Sugar milk </p>
 <p> Pack Size: 6 </p>
-<p> $ 27.45 </p>
 </div>
 
 <hr> </hr>
 
-<div class="checkout-button">
-    <button> Checkout </button>
+<div class="container">
+    <p> Total: $ 27.45 </p>
+    <button class="checkout">Checkout</button>
 </div>
+
 
 
 </body>
