added links to each image to link to product gallery

--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -81,6 +81,7 @@
 </div>
 </a>
 
+<a href="productdetails.html">
 <div class="cinnammon-item"> 
   <img src="../assets/products/raisin-cinnamon-roll.jpg" class="orginal-product-page-img" />
 
@@ -92,8 +93,10 @@
     <p> $2.99 </p>
   </div>
 </div>
+</a>
 
 
+<a href="productdetails.html">
 <div class="cinnammon-item"> 
   <img src="../assets/products/walnut-cinnamon-roll.jpg" class="orginal-product-page-img" />
 
@@ -105,7 +108,10 @@
     <p> $3.49 </p>
   </div>
 </div>
+</a>
 
+
+<a href="productdetails.html">
 <div class="cinnammon-item"> 
   <img src="../assets/products/double-chocolate-cinnamon-roll.jpg" class="orginal-product-page-img" />
 
@@ -117,8 +123,10 @@
     <p> $3.99 </p>
   </div>
 </div>
+</a>
 
 
+<a href="productdetails.html">
 <div class="cinnammon-item"> 
   <img src="../assets/products/strawberry-cinnamon-roll.jpg" class="orginal-product-page-img" />
 
@@ -130,7 +138,7 @@
     <p> $3.99 </p>
   </div>
 </div>
-
+</a>
 
 </body>
 
