fixed the padding and got product details page to be centered

--- a/solution-hw1/productdetails.html
+++ b/solution-hw1/productdetails.html
@@ -28,16 +28,21 @@
     <p>Our hand-made cinnamon rolls</p>
   </div>
 
+  
+
+ <div class="wrap-whole-picture-together">
+<div class="picture-content">
 
 <img src="../assets/products/original-cinnamon-roll.jpg" class="orginal-bunbun-product-details-img"/>
 </div>
 
-<div class="original-prodcuts-details-text">
+<div class="original-products-details-text">
 <p> Customize our delicious</p>
 <p> hand-made cinnamon roll to</p>
 <p> your likng! </p>
 </div>
-
+</div>
+</div> 
 
 <!-- learned to create a dropdown from w3schools -->
 
@@ -64,8 +69,11 @@
 
 <!-- </div> -->
 
-<div class="checkout-box">
-    <p> $2.49 <button> Add to Cart </button></p>
+
+<div class="add-box-together">
+  <p> $2.49 </p>
+     <button class="add-to-cart">Add to Cart</button> 
+    <!-- <a href="shoppingcart.html" class="add-to-cart">Add to Cart</a> -->
 </div>
 
 </div>
