--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -11,7 +11,7 @@
 
   <div class="logo">
     <a href="index.html">
-    <img src="../assets/logo/logo-01.svg" class="logo-img" /></a>
+    <img src="../assets/logo/logo-01.svg" alt="Bun Bun logo" class="logo-img" /></a>
   </div>
 
   <hr />
@@ -42,7 +42,7 @@
  
   <a href="productdetails.html">
   <div class="cinnammon-item"> 
-    <img src="../assets/products/original-cinnamon-roll.jpg" class="orginal-product-page-img" alt="Original Cinnamon Roll" />
+    <img src="../assets/products/original-cinnamon-roll.jpg"  alt="Original cinnamon roll" class="orginal-product-page-img" alt="Original Cinnamon Roll" />
 
     <div class="original-index-text">
         <p>Original cinnamon roll</p>
@@ -69,7 +69,7 @@
 
 <a href="productdetails.html">
 <div class="cinnammon-item"> 
-  <img src="../assets/products/apple-cinnamon-roll.jpg" class="orginal-product-page-img" />
+  <img src="../assets/products/apple-cinnamon-roll.jpg" alt="Apple cinnamon roll" class="orginal-product-page-img" />
 
   <div class="original-index-text">
     <p>Apple cinnamon roll</p>
@@ -83,7 +83,7 @@
 
 <a href="productdetails.html">
 <div class="cinnammon-item"> 
-  <img src="../assets/products/raisin-cinnamon-roll.jpg" class="orginal-product-page-img" />
+  <img src="../assets/products/raisin-cinnamon-roll.jpg" alt="Raisin cinnamon roll" class="orginal-product-page-img" />
 
   <div class="original-index-text">
     <p> Raisin cinnamon roll </p>
@@ -98,7 +98,7 @@
 
 <a href="productdetails.html">
 <div class="cinnammon-item"> 
-  <img src="../assets/products/walnut-cinnamon-roll.jpg" class="orginal-product-page-img" />
+  <img src="../assets/products/walnut-cinnamon-roll.jpg" alt="Walnut cinnamon roll" class="orginal-product-page-img" />
 
   <div class="original-index-text">
     <p> Walnut cinnamon roll </p>
@@ -113,7 +113,7 @@
 
 <a href="productdetails.html">
 <div class="cinnammon-item"> 
-  <img src="../assets/products/double-chocolate-cinnamon-roll.jpg" class="orginal-product-page-img" />
+  <img src="../assets/products/double-chocolate-cinnamon-roll.jpg" alt="Double Chocolate cinnamon roll" class="orginal-product-page-img" />
 
   <div class="original-index-text">
     <p> Double-chocolate cinnamon roll </p>
@@ -128,7 +128,7 @@
 
 <a href="productdetails.html">
 <div class="cinnammon-item"> 
-  <img src="../assets/products/strawberry-cinnamon-roll.jpg" class="orginal-product-page-img" />
+  <img src="../assets/products/strawberry-cinnamon-roll.jpg" alt="Strawberry cinnamon roll" class="orginal-product-page-img" />
 
   <div class="original-index-text">
     <p> Strawberry cinnamon roll </p>
