--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -16,9 +16,12 @@
 
   <hr />
 
+<!-- linking products to index html -->
   <div class="original-products-text">
     <a href="index.html">PRODUCTS</a>
   </div>
+
+  <!-- linking carts to shopping carts html -->
 
   <div class="original-cart-text">
     <a href="shoppingcart.html">CARTS</a>
@@ -40,6 +43,7 @@
     </div>
   </a> -->
  
+  <!-- where i list all of my prodcuts  -->
   <a href="productdetails.html">
   <div class="cinnammon-item"> 
     <img src="../assets/products/original-cinnamon-roll.jpg"  alt="Original cinnamon roll" class="orginal-product-page-img" alt="Original Cinnamon Roll" />
