updated all logos

--- a/solution-hw2/productdetails.html
+++ b/solution-hw2/productdetails.html
@@ -8,7 +8,30 @@
 
 <body>
 
-    <div class="logo">
+    <header class="header">
+        <div class="navagation-container">
+            <nav class="navagation-bar">
+                <ul class="navagation-list">
+                    <li class="navagation-item">
+                        <a href="index.html" class="navagation-linking">PRODUCTS</a>
+                    </li>
+                    <li class="navagation-item">
+                        <a href="shoppingcart.html" class="navagation-linking">CARTS</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+        <div class="logo-line-break-container">
+            <div class="logo-container">
+                <a href="index.html" class="logo">
+                    <img src="../assets/logo/logo-01.svg" alt="Bun Bun logo" class="logo-img" />
+                </a>
+            </div>
+            <hr class="divider" />
+        </div>
+    </header>
+
+    <!-- <div class="logo">
         <a href="index.html">
         <img src="../assets/logo/logo-01.svg" class="logo-img" /></a>
       </div>
@@ -22,7 +45,7 @@
 
   <div class="original-cart-text">
     <a href="shoppingcart.html">CARTS</a>
-  </div>
+  </div> -->
   
     <div class="original-sentence-right-under-cart-text">
     <p>Our hand-made cinnamon rolls</p>
@@ -37,13 +60,16 @@
 <img src="../assets/products/original-cinnamon-roll.jpg" class="orginal-bunbun-product-details-img"/>
 </div>
 
+
 <div class="original-products-details-text">
 <p> Customize our delicious</p>
 <p> hand-made cinnamon roll to</p>
 <p> your likng! </p>
+
+
 </div>
 </div>
-</div> 
+</div>
 
 <!-- learned to create a dropdown from w3schools -->
 
