--- a/solution-hw2/shoppingcart.html
+++ b/solution-hw2/shoppingcart.html
@@ -7,6 +7,31 @@
 </head>
 <body>
 
+    <header class="header">
+        <div class="navagation-container">
+            <nav class="navagation-bar">
+                <ul class="navagation-list">
+                    <li class="navagation-item">
+                        <a href="index.html" class="navagation-linking">PRODUCTS</a>
+                    </li>
+                    <li class="navagation-item">
+                        <a href="shoppingcart.html" class="navagation-linking">CARTS</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+        <div class="logo-line-break-container">
+            <div class="logo-container">
+                <a href="index.html" class="logo">
+                    <img src="../assets/logo/logo-01.svg" alt="Bun Bun logo" class="logo-img" />
+                </a>
+            </div>
+            <hr class="divider" />
+        </div>
+    </header>
+
+    <!-- this was old code from hw1, i didnt make product or cart into a nav bar -->
+<!-- 
   <div class="logo">
     <a href="index.html">
     <img src="../assets/logo/logo-01.svg" class="logo-img" /></a>
@@ -20,7 +45,7 @@
 
   <div class="original-cart-text">
     <a href="shoppingcart.html">CARTS</a>
-  </div>
+  </div> -->
 
 <div class="original-shopping-cart-text">
 <h2> Shopping Cart</h2>
