trying to figure out margin and put text to the left

--- a/solution-hw2/productdetails.html
+++ b/solution-hw2/productdetails.html
@@ -62,7 +62,7 @@
 
 
 <div class="original-products-details-text">
-<p> Customize our delicious</p>
+<p> Customize our delicious,</p>
 <p> hand-made cinnamon roll to</p>
 <p> your likng! </p>
 
