Making rows and columns
i used flexbox to help with, i still want to make price text go closer up

--- a/solution-hw2/index.html
+++ b/solution-hw2/index.html
@@ -93,6 +93,8 @@
   </a> -->
  
   <!-- where i list all of my prodcuts  -->
+
+  <div class="all-product-items"> 
   <a href="productdetails.html">
   <div class="cinnammon-item"> 
     <img src="../assets/products/original-cinnamon-roll.jpg"  alt="Original cinnamon roll" class="orginal-product-page-img" alt="Original Cinnamon Roll" />
@@ -152,11 +154,10 @@
 </div>
 </a>
 
-
+    
 <a href="productdetails.html">
 <div class="cinnammon-item"> 
   <img src="../assets/products/double-chocolate-cinnamon-roll.jpg" alt="Double Chocolate cinnamon roll" class="orginal-product-page-img" />
-
   <div class="original-index-text">
     <p> Double-chocolate cinnamon roll </p>
   </div>
@@ -165,7 +166,7 @@
     <p> $3.99 </p>
   </div>
 </div>
-</a>
+</a> 
 
 
 <a href="productdetails.html">
@@ -181,6 +182,7 @@
   </div>
 </div>
 </a>
+</div>
 
 </body>
 
