updated page 2 and 3
updated the details and shopping cart page. need to fix the nav bar and move up the price to the middle

--- a/solution-hw2/productdetails.html
+++ b/solution-hw2/productdetails.html
@@ -54,22 +54,19 @@
   
 
 <!-- puts everything into a container -->
-<div class="wrap-whole-picture-together">
-<div class="picture-content">
+<div class="everything-wrapped">
 
+<div class="picture-content">
 <img src="../assets/products/original-cinnamon-roll.jpg" class="orginal-bunbun-product-details-img"/>
 </div>
 
-
+<div class="right-wrapped">
 <div class="original-products-details-text">
 <p> Customize our delicious,</p>
 <p> hand-made cinnamon roll to</p>
 <p> your likng! </p>
+</div>
 
-
-</div>
-</div>
-</div>
 
 <!-- learned to create a dropdown from w3schools -->
 
@@ -103,6 +100,9 @@
     <!-- <a href="shoppingcart.html" class="add-to-cart">Add to Cart</a> -->
 </div>
 
+<!-- </div>
+</div> -->
+</div>
 </div>
 </body>
 </html>
