--- a/solution-hw2/shoppingcart.html
+++ b/solution-hw2/shoppingcart.html
@@ -47,29 +47,46 @@
     <a href="shoppingcart.html">CARTS</a>
   </div> -->
 
-<div class="original-shopping-cart-text">
+<!-- <div class="original-shopping-cart-text">
 <h2> Shopping Cart</h2>
+</div> -->
+
+<div class="remove-with-picture">
+<img src="../assets/products/original-cinnamon-roll.jpg" class="orginal-product-gallery-img"/>
+<div class="remove-text-under-picture">
+<p> Remove</p>
+</div>
 </div>
 
-
-<img src="../assets/products/original-cinnamon-roll.jpg" class="orginal-product-gallery-img"/>
-
-
 <!-- putting eveyrhting into a container -->
- 
+<div class="product-page-flex"> 
 <div class="original-under-image-shopping-cart-text"> 
 <p> Original Cinnamon Roll</p>
 <p> Glazing: Keep original </p>
 <p> Pack Size: 1 </p>
+</div>
+</div>
+
+<div class="product-page-price-flex"> 
 <p> $ 2.49 </p>
 </div>
 
+<div class="remove-with-picture">
 <img src="../assets/products/double-chocolate-cinnamon-roll.jpg" class="orginal-product-gallery-img"/>
+<div class="remove-text-under-picture">
+<p> Remove</p>
+</div>
+</div>
 
+<div class="product-page-flex"> 
 <div class="original-under-image-shopping-cart-text"> 
 <p> Double Chocolate Cinnamon Roll</p>
 <p> Glazing: Sugar milk </p>
 <p> Pack Size: 6 </p>
+</div>
+</div>
+
+<div class="product-page-price-flex"> 
 <p> $ 27.45 </p>
 </div>
 
