fixed the nav bar

--- a/solution-hw2/shoppingcart.html
+++ b/solution-hw2/shoppingcart.html
@@ -8,22 +8,34 @@
 <body>
 
     <header class="header">
-        <div class="navagation-container">
-            <nav class="navagation-bar">
-                        <a href="index.html" class="navagation-linking">PRODUCTS</a>
-                        <a href="shoppingcart.html" class="navagation-linking">CARTS</a>
-            </nav>
-        </div>
         <div class="logo-line-break-container">
-            <div class="logo-container">
-                <a href="index.html" class="logo">
-                    <img src="../assets/logo/logo-01.svg" alt="Bun Bun logo" class="logo-img" />
-                </a>
+            <div class = "logo-container">
+             <a href="index.html" class="logo">
+                 <img src="../assets/logo/logo-01.svg" alt="Bun Bun logo" class="logo-img" />
+             </a>
             </div>
-            <hr class="divider" />
-        </div>
+
+             <div class="navagation-container">
+                 <nav class="navagation-bar">
+                     <ul class="navagation-list">
+                         <li class="navagation-item">
+                             <a href="index.html" class="navagation-linking">PRODUCTS</a>
+                         </li>
+                         <li class="navagation-item">
+                             <a href="shoppingcart.html" class="navagation-linking">CARTS</a>
+                         </li>
+                     </ul>
+                 </nav>
+                 <hr class="divider" />
+             </div>
+             <br>
+             
+         </div>
     </header>
 
+    <div class="original-sentence-right-under-cart-text">
+        <p>Our hand-made cinnamon rolls</p>
+      </div>
 
 <div class="remove-with-picture">
 <img src="../assets/products/original-cinnamon-roll.jpg" class="orginal-product-gallery-img"/>
