updated the name of js

--- a/solution-hw3/productdetails.html
+++ b/solution-hw3/productdetails.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Product Detail Page</title>
   <link rel="stylesheet" href="CSS/style.css">
-  <script defer src="price.js"></script>
+  <script defer src="solution-hw3.js"></script>
 </head>
 
 <body>
