--- a/solution-hw3/shoppingcart.html
+++ b/solution-hw3/shoppingcart.html
@@ -36,13 +36,14 @@
     <div class="original-sentence-right-under-cart-text">
         <p>Our hand-made cinnamon rolls</p>
       </div>
-
+<div class="shop-cart-everything">
 <div class="remove-with-picture">
 <img src="../assets/products/original-cinnamon-roll.jpg" class="orginal-product-gallery-img"/>
 <div class="remove-text-under-picture">
 <p> Remove</p>
 </div>
 </div>
+
 
 <!-- putting eveyrhting into a container -->
 <div class="product-page-flex"> 
@@ -53,10 +54,13 @@
 </div>
 </div>
 
+
 <div class="product-page-price-flex"> 
 <p> $ 2.49 </p>
 </div>
+</div>
 
+<div class="shop-cart-everything">
 <div class="remove-with-picture">
 <img src="../assets/products/double-chocolate-cinnamon-roll.jpg" class="orginal-product-gallery-img"/>
 
@@ -64,6 +68,7 @@
     <p> Remove</p>
 </div>
 </div>
+
 
 <div class="product-page-flex"> 
 <div class="original-under-image-shopping-cart-text"> 
@@ -76,7 +81,7 @@
 <div class="product-page-price-flex"> 
 <p> $ 27.45 </p>
 </div>
-
+</div>
 <hr> </hr>
 
 <div class="container">
