Fixed the image sizing

--- a/solution-hw4/shoppingcart.html
+++ b/solution-hw4/shoppingcart.html
@@ -94,7 +94,7 @@
 
     <div class="container">
       <div class="total-name">
-        <p>Total:</p>
+        <p>Total</p>
       </div>
       <div class="total-price">
         <p>$ 29.94</p>
