--- a/solution-hw5/index.html
+++ b/solution-hw5/index.html
@@ -5,7 +5,7 @@
     <title>Product Gallery</title>
     <link rel="stylesheet" href="CSS/style.css" />
     <script defer src="rollsData.js"></script>
-    <script defer src="../solution-hw4.js"></script>
+    <script defer src="../solution-hw5"></script>
   </head>
 
   <body>
