fianl project draft
will change based on TA feedback

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
       <li><a href="solution-hw3">Homework Assignment 3</a></li>
       <li><a href="solution-hw4">Homework Assignment 4</a></li>
       <li><a href="solution-hw5">Homework Assignment 5</a></li>
-      <li><a href="solution-hw6">Homework Assignment 5</a></li>
+      <li><a href="solution-hw6">Homework Assignment 6</a></li>
+      <li><a href="final-project">Final Project</a></li>
     </ul>
   </body>
 </html>
