--- a/final-project/high_porosity.html
+++ b/final-project/high_porosity.html
@@ -23,7 +23,10 @@
 
       <div class="recommendations-content">
         <div class="recommendation-image">
-          <img src="4a hair.jpeg" alt="4a hair examples" />
+          <img
+            src="4a hair.jpeg"
+            alt="Curly hair photo that shows loose type curls"
+          />
         </div>
         <div class="recommendation-text">
           <div class="porosity-type">HIGH POROSITY</div>
