--- a/final-project/journey.html
+++ b/final-project/journey.html
@@ -21,7 +21,11 @@
     <section class="journey-container">
       <h2 id="typed">WHEN WET, DOES YOUR HAIR TAKE A LONG TIME TO DRY?</h2>
       <div class="journey-buttons">
-        <img src="glass.jpeg" alt="glass" class="glass-image" />
+        <img
+          src="glass.jpeg"
+          alt="glass cup that half full with a strand of hair in it to show porosity"
+          class="glass-image"
+        />
         <div style="display: flex; gap: 100px; margin-top: 100px">
           <a href="low_porosity.html">
             <button class="options">Yes</button>
